--- a/index.html
+++ b/index.html
@@ -4,15 +4,263 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Portfolio</title>
-</head>
-<body>
-  <h1>制作物ポートフォリオ</h1>
-  <p>個人開発のまとめページです。</p>
+  <meta name="description" content="制作したアプリのポートフォリオ" />
+  <style>
+    :root{
+      --bg:#0b0f16;
+      --card:rgba(255,255,255,.06);
+      --border:rgba(255,255,255,.12);
+      --text:#e9eef7;
+      --muted:rgba(233,238,247,.75);
+      --shadow:0 12px 30px rgba(0,0,0,.35);
+      --radius:18px;
+      --container:1100px;
+    }
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      background: radial-gradient(1200px 800px at 20% -10%, rgba(255,120,120,.18), transparent 55%),
+                  radial-gradient(900px 700px at 110% 20%, rgba(120,200,255,.12), transparent 55%),
+                  var(--bg);
+      color:var(--text);
+    }
+    a{ color:inherit; text-decoration:none; }
 
-  <h2>アプリ / プロジェクト</h2>
-  <ul>
-    <li><a href="https://Touhoueitangoroku.github.io/mygame-site/">東方英単語録</a></li>
-    <!-- ここにTABLIAやゆるカレンダー等を追加していく -->
-  </ul>
+    .wrap{
+      max-width: var(--container);
+      margin: 0 auto;
+      padding: 22px 14px 50px;
+    }
+    .top{
+      display:flex;
+      align-items:flex-end;
+      justify-content:space-between;
+      gap:12px;
+      margin-bottom: 16px;
+    }
+    h1{
+      margin:0;
+      font-size: 28px;
+      letter-spacing: .02em;
+    }
+    .subtitle{
+      margin:6px 0 0;
+      color:var(--muted);
+      font-size: 14px;
+    }
+    .hint{
+      color:var(--muted);
+      font-size: 12px;
+      text-align:right;
+      line-height:1.5;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 12px;
+      margin-top: 14px;
+    }
+    .card{
+      grid-column: span 6; /* PC: 2列 */
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 14px;
+      display:flex;
+      gap: 12px;
+      transition: transform .15s ease, border-color .15s ease, background .15s ease;
+    }
+    .card:hover{
+      transform: translateY(-2px);
+      border-color: rgba(255,255,255,.22);
+      background: rgba(255,255,255,.08);
+    }
+    .icon{
+      width: 72px;
+      height: 72px;
+      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.18);
+      flex: 0 0 auto;
+      object-fit: cover;
+    }
+    .body{
+      min-width: 0;
+      flex:1;
+    }
+    .nameRow{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+    }
+    .name{
+      margin:0;
+      font-size: 18px;
+      font-weight: 800;
+      letter-spacing: .01em;
+      overflow:hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+    .badge{
+      font-size: 12px;
+      color: var(--muted);
+      border: 1px solid rgba(255,255,255,.14);
+      padding: 4px 8px;
+      border-radius: 999px;
+      flex: 0 0 auto;
+      background: rgba(0,0,0,.12);
+    }
+    .desc{
+      margin: 8px 0 10px;
+      color: var(--muted);
+      font-size: 13px;
+      line-height: 1.55;
+    }
+    .meta{
+      display:flex;
+      flex-wrap:wrap;
+      gap: 8px;
+      margin: 0 0 10px;
+      padding:0;
+      list-style:none;
+    }
+    .chip{
+      font-size: 12px;
+      border: 1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.12);
+      padding: 5px 8px;
+      border-radius: 999px;
+      color: var(--muted);
+    }
+    .actions{
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
+    }
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:6px;
+      height: 34px;
+      padding: 0 12px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(0,0,0,.16);
+      color: var(--text);
+      font-size: 13px;
+      cursor:pointer;
+    }
+    .btnPrimary{
+      background: rgba(255,120,120,.18);
+      border-color: rgba(255,120,120,.35);
+    }
+
+    /* タブレット以下：1列 */
+    @media (max-width: 820px){
+      .card{ grid-column: span 12; }
+      .top{ flex-direction: column; align-items:flex-start; }
+      .hint{ text-align:left; }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <div class="top">
+      <div>
+        <h1>制作物ポートフォリオ</h1>
+        <p class="subtitle">作ったアプリのまとめ（リンク・機能概要・対応機種）</p>
+      </div>
+      <div class="hint">
+        ※アイコン画像は <code>img/</code> に配置（256×256推奨）<br/>
+        ※URLはあなたの公開URLに置き換えてOK
+      </div>
+    </div>
+
+    <div class="grid">
+      <!-- 東方英単語録 -->
+      <a class="card" href="https://touhoueitangoroku.github.io/mygame-site/" target="_blank" rel="noopener">
+        <img class="icon" src="img/touhou.png" alt="東方英単語録 アイコン">
+        <div class="body">
+          <div class="nameRow">
+            <h2 class="name">東方英単語録</h2>
+            <span class="badge">Web / Game</span>
+          </div>
+          <p class="desc">東方キャラをモチーフにした英単語・クイズ系アプリ。学習をゲーム感覚で継続できるように設計。</p>
+          <ul class="meta">
+            <li class="chip">機能：クイズ / 収集 / ガイド</li>
+            <li class="chip">対応：PC / スマホ</li>
+          </ul>
+          <div class="actions">
+            <span class="btn btnPrimary">サイトを見る</span>
+          </div>
+        </div>
+      </a>
+
+      <!-- TABLIA -->
+      <a class="card" href="https://tabula-quiz.web.app/" target="_blank" rel="noopener">
+        <img class="icon" src="img/tablia.png" alt="TABLIA アイコン">
+        <div class="body">
+          <div class="nameRow">
+            <h2 class="name">TABLIA</h2>
+            <span class="badge">Web App</span>
+          </div>
+          <p class="desc">試験対策クイズプラットフォーム。問題作成・学習・フィードバックを一体化し、継続学習を支援。</p>
+          <ul class="meta">
+            <li class="chip">機能：作成 / 解く / 共有</li>
+            <li class="chip">対応：PC / スマホ</li>
+          </ul>
+          <div class="actions">
+            <span class="btn btnPrimary">開く</span>
+          </div>
+        </div>
+      </a>
+
+      <!-- ゆるカレンダー -->
+      <a class="card" href="https://yurukarenda.web.app/" target="_blank" rel="noopener">
+        <img class="icon" src="img/yuru-calendar.png" alt="ゆるカレンダー アイコン">
+        <div class="body">
+          <div class="nameRow">
+            <h2 class="name">ゆるカレンダー</h2>
+            <span class="badge">PWA</span>
+          </div>
+          <p class="desc">AM/PM中心の“ゆるい”予定管理。ドラッグ操作やモーダルで直感的に予定を追加・編集。</p>
+          <ul class="meta">
+            <li class="chip">機能：予定追加 / ドラッグ / テーマ</li>
+            <li class="chip">対応：PC / スマホ / タブレット</li>
+          </ul>
+          <div class="actions">
+            <span class="btn btnPrimary">開く</span>
+          </div>
+        </div>
+      </a>
+
+      <!-- リンクブロッカー -->
+      <a class="card" href="#" target="_blank" rel="noopener">
+        <img class="icon" src="img/link-blocker.png" alt="リンクブロッカー アイコン">
+        <div class="body">
+          <div class="nameRow">
+            <h2 class="name">リンクブロッカー</h2>
+            <span class="badge">Tool</span>
+          </div>
+          <p class="desc">不要なリンクや広告系リンクを見分けやすく／誤タップを防ぐための支援ツール（開発中/検証中）。</p>
+          <ul class="meta">
+            <li class="chip">機能：リンク判定 / 表示制御</li>
+            <li class="chip">対応：ブラウザ（予定）</li>
+          </ul>
+          <div class="actions">
+            <span class="btn">準備中</span>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 </body>
 </html>
