--- a/index.html
+++ b/index.html
@@ -178,10 +178,6 @@
         <h1>制作物ポートフォリオ</h1>
         <p class="subtitle">作ったアプリのまとめ（リンク・機能概要・対応機種）</p>
       </div>
-      <div class="hint">
-        ※アイコン画像は <code>img/</code> に配置（256×256推奨）<br/>
-        ※URLはあなたの公開URLに置き換えてOK
-      </div>
     </div>
 
     <div class="grid">
@@ -196,7 +192,7 @@
           <p class="desc">東方キャラをモチーフにした英単語・クイズ系アプリ。学習をゲーム感覚で継続できるように設計。</p>
           <ul class="meta">
             <li class="chip">機能：クイズ / 収集 / ガイド</li>
-            <li class="chip">対応：PC / スマホ</li>
+            <li class="chip">対応：Android</li>
           </ul>
           <div class="actions">
             <span class="btn btnPrimary">サイトを見る</span>
@@ -215,7 +211,7 @@
           <p class="desc">試験対策クイズプラットフォーム。問題作成・学習・フィードバックを一体化し、継続学習を支援。</p>
           <ul class="meta">
             <li class="chip">機能：作成 / 解く / 共有</li>
-            <li class="chip">対応：PC / スマホ</li>
+            <li class="chip">対応：PC(Windows,Mac) / スマートフォン(Android,Iphone)</li>
           </ul>
           <div class="actions">
             <span class="btn btnPrimary">開く</span>
@@ -234,7 +230,7 @@
           <p class="desc">AM/PM中心の“ゆるい”予定管理。ドラッグ操作やモーダルで直感的に予定を追加・編集。</p>
           <ul class="meta">
             <li class="chip">機能：予定追加 / ドラッグ / テーマ</li>
-            <li class="chip">対応：PC / スマホ / タブレット</li>
+            <li class="chip">対応：PC(Windows,Mac) / スマートフォン(Android,Iphone)</li>
           </ul>
           <div class="actions">
             <span class="btn btnPrimary">開く</span>
@@ -253,7 +249,7 @@
           <p class="desc">不要なリンクや広告系リンクを見分けやすく／誤タップを防ぐための支援ツール（開発中/検証中）。</p>
           <ul class="meta">
             <li class="chip">機能：リンク判定 / 表示制御</li>
-            <li class="chip">対応：ブラウザ（予定）</li>
+            <li class="chip">対応：PC(Windows,Mac)（予定）</li>
           </ul>
           <div class="actions">
             <span class="btn">準備中</span>
